<<<<<<< HISTORY
TAG: feindexer-tr6519-BP
DATE: 12/03/2012
STAFF: jsb
CHANGES:
1) branch point for TR6519 n-to-m orthologs

TAG: feindexer-5-1-1-1
DATE: 11/02/2012
STAFF: dbm
CHANGES:
1) Config changes for TR11163

TAG: feindexer-tr10273-BP
DATE: 8/24/12
STAFF: pf
CHANGES: branch point for tr10273 HT-MP

TAG: feindexer-5-1-0-1
DATE: 8/7/12
STAFF: pf
CHANGES: 5.1 aplha tags

TAG: feindexer-5-0-1-0
DATE: 05/10/2012
STAFF: jsb
CHANGES:
1) added extra ordering field for markerAnnotation index (byDagTerm)
2) changed to only index public mouse marker IDs (no private IDs, no non-mouse marker IDs)

TAG: feindexer-5-0-0-11
DATE: 02/27/2012
STAFF: dbm
CHANGES:
1) configure: establish default for HTTP_HOST

TAG: feindexer-5-0-0-10
DATE: 02/27/2012
STAFF: dbm
CHANGES:
1) configureAndBuildAll: enhanced logging

TAG: feindexer-5-0-0-9
DATE: 02/16/2012
STAFF: jsb
CHANGES:
1) added error checking and setting of exit code for configureAndBuildAll

TAG: feindexer-5-0-0-8
DATE: 02/16/2012
STAFF: jsb
CHANGES:
1) lowered memory requirements for markerTissue
2) added optimize() call
3) updated nomen searching requirements for gxdLitIndex

TAG: feindexer-5-0-0-7
DATE: 02/16/2012
STAFF: dbm
CHANGES:
1) configureAndBuildAll: use databases on currect host (PG_FE_DBSERVER)
   instead of using DB_HOST from mgiconfig

TAG: feindexer-tr10269-BP
DATE: 1/26/2012
STAFF: jmason
CHANGES:
1) Branch point tag for TR10269

TAG: feindexer-5-0-0-6
DATE: 01/18/2012
STAFF: dbm
CHANGES: reconfiguration of configureAndBuildAll script

TAG: feindexer-5-0-0-5
DATE: 01/09/2012
STAFF: jsb
CHANGES: bug fixes

TAG: feindexer-5-0-0-4
DATE: 12/20/2011
STAFF: jsb
CHANGES: added config.props.template file

TAG: feindexer-5-0-0-3
DATE: 12/20/2011
STAFF: jsb
CHANGES: changed ant build process 

TAG: feindexer-5-0-0-2
DATE: 12/19/2011
STAFF: jsb
CHANGES: parallelized calls to indexers

TAG: feindexer-5-0-0-1
DATE: 9/21/10
STAFF: mhall
CHANGES: Initial version of this new product.
