@@ -10,11 +10,13 @@ index.url.allele={BASE_URL}/allele/
 index.url.markerAnnotation={BASE_URL}/markerAnnotation/
 index.url.creAlleleSystem={BASE_URL}/creAlleleSystem/
 index.url.creAssayResult={BASE_URL}/creAssayResult/
+index.url.disease={BASE_URL}/disease/
 index.url.gxdLitIndex={BASE_URL}/gxdLitIndex/
 index.url.markerTissue={BASE_URL}/markerTissue/
 index.url.structureAC={BASE_URL}/structureAC/
 index.url.vocabTermAC={BASE_URL}/vocabTermAC/
 index.url.gxdResult={BASE_URL}/gxdResult/
+index.url.homology={BASE_URL}/homology/
 
 mgd.user={DB_USER}
 mgd.password={DB_PASSWORD}
