@@ -42,6 +42,8 @@ public class Main
 		indexerMap.put("structureAC", new StructureAutoCompleteIndexerSQL());
 		indexerMap.put("vocabTermAC", new VocabTermAutoCompleteIndexerSQL());
 		indexerMap.put("gxdResult", new GXDResultIndexerSQL());
+		indexerMap.put("homology", new HomologyIndexerSQL());
+		indexerMap.put("disease", new DiseaseIndexerSQL());
 	
 		//TODO: Are these obselete? If so can we get rid of these classes?
 		//indexerMap.put("phenotypeImage",new PhenotypeImageIndexerSQL());
